--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   freezed: ^0.14.0
   build_runner: ^1.11.5
   json_serializable: ^4.0.2
+  flutter_hooks: ^0.16.0-nullsafety.0
+  hooks_riverpod: ^0.13.1
   
   flutter:
     sdk: flutter
