--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   json_serializable: ^4.0.2
   flutter_hooks: ^0.16.0-nullsafety.0
   hooks_riverpod: ^0.13.1
+  google_fonts: ^2.0.0
   
   flutter:
     sdk: flutter
